# noisette

./: CMakeLists.txt  README.md
cmake/: noisetteConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
include/noisette/: noise.h
